Avoid updates when in puzzle mode

--- a/project.json
+++ b/project.json
@@ -2751,6 +2751,12 @@
 		},
 		"\\SteamDriller.eeprom": {
 			"sdcard": false
+		},
+		"\\State.h": {
+			"sdcard": false
+		},
+		"\\StateIntro.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
