Hud for Boss dialogue

--- a/project.json
+++ b/project.json
@@ -3218,6 +3218,9 @@
 		},
 		"\\assets\\SteamDriller_Portrait_EvilAI.h": {
 			"sdcard": false
+		},
+		"\\SteamDrillerFixed.bin": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
