--- a/project.json
+++ b/project.json
@@ -3221,6 +3221,30 @@
 		},
 		"\\SteamDrillerFixed.bin": {
 			"sdcard": false
+		},
+		"\\assets\\tiles\\SteamDriller_UnbreakableFloor - Copia.png": {
+			"sdcard": false
+		},
+		"\\assets\\tiles\\SteamDriller_UnbreakableCeiling.png": {
+			"sdcard": false
+		},
+		"\\assets\\tiles\\SteamDriller_UnbreakableCeiling.h": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_Dock_Anim.ase": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_Dock_Anim.png": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_Dock_Anim.json": {
+			"sdcard": false
+		},
+		"\\sprites/SteamDriller_Dock_Anim.bin": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_Dock_Anim.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
