--- a/project.json
+++ b/project.json
@@ -3290,6 +3290,21 @@
 		},
 		"\\sprites\\SteamDriller_Dock_Anim.bin": {
 			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_TNT_Detonator_Anim.ase": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_TNT_Detonator_Anim.json": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_TNT_Detonator_Anim.png": {
+			"sdcard": false
+		},
+		"\\sprites/SteamDriller_TNT_Detonator_Anim.bin": {
+			"sdcard": false
+		},
+		"\\sprites\\SteamDriller_TNT_Detonator_Anim.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
