--- a/project.json
+++ b/project.json
@@ -3566,6 +3566,15 @@
 		},
 		"\\assets\\pop\\SteamDriller_Icon_24x24.png": {
 			"sdcard": false
+		},
+		"\\assets\\pop\\SteamDriller_POPBanner.h": {
+			"sdcard": false
+		},
+		"\\assets\\pop\\SteamDriller_Icon_36x36.h": {
+			"sdcard": false
+		},
+		"\\assets\\pop\\SteamDriller_Icon_24x24.h": {
+			"sdcard": false
 		}
 	},
 	"BUILDFlags": {
